@@ -19,6 +19,7 @@ Jacksum 3.0.1-not-yet-released
 
 - bugs fixed
 
+    - fixed: a NPE is thrown if a non-compatibility file is given by option -C
     - fixed: compat files bsd, linux, and openssl should use line separator \n on Microsoft Windows,
       otherwise md5sum, sha1sum, etc. on GNU/Linux cannot read Jacksum's output
     - fixed: typo in compat files linux and openssl which results in wrong stdin names
